Fix alignment of button SVGs.

--- a/assets/sass/components/global/_googlesitekit-cta-link.scss
+++ b/assets/sass/components/global/_googlesitekit-cta-link.scss
@@ -32,6 +32,10 @@
 		fill: currentColor;
 	}
 
+	> span > svg {
+		vertical-align: bottom;
+	}
+
 	&:hover {
 		color: $c-link;
 		text-decoration: underline;
